@@ -4,6 +4,9 @@ Changelog
 1.2.2 - Unreleased
 ------------------
 
+- Added support for showing/hiding of all portlets (PLIP 9286).
+  [igbun]
+
 - Backportlet a fix for the manage-portlets view
   for not showing inherited portlets that are blocked at an upper level.
   This references 
